<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginWithOtpActivity">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_login"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_valid_mobile"
        app:layout_constraintStart_toEndOf="@+id/imageView6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outlinedTextField4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@drawable/borderstye"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoDetectLanguage="true"
            app:ccp_defaultNameCode="BD"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:ccp_textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/outlinedTextField4"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField4"
            app:layout_constraintTop_toTopOf="@+id/outlinedTextField4"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="4dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/text_phone"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColorHint="#AAAAAA"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/ccp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/orenge"
        android:onClick="goToOTP"
        android:text="@string/text_go"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/outlinedTextField4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/outlinedTextField4"
        app:layout_constraintTop_toTopOf="@+id/outlinedTextField4" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_shop_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/outlinedTextField4"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextField4"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/tv_valid_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_valid_mobile"
        android:textColor="@color/orenge"
        android:textSize="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/tv_login" />


</androidx.constraintlayout.widget.ConstraintLayout>