<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:padding="@dimen/_5sdp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight=".47"
                    android:background="@drawable/white_transparent_k" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".53"
                    android:background="@drawable/radius_top" />
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="-50dp"
                android:src="@drawable/document_icon"
                app:civ_border_color="@color/white"
                app:civ_border_width="@dimen/_5sdp" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_close_black" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_bottom"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <TextView
                android:id="@+id/createstocktitleid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/string_createVendor"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:fontFamily="@font/montserrat"
                android:justificationMode="inter_word"
                android:text="The quick brown fox jumps over the lazy dog"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/string_company_name"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextAppearance="@style/BlueTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7">

                <EditText
                    android:id="@+id/nameid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHint="@color/blue"
                    android:textSize="11dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/string_company_full_name"
                android:textSize="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/string_Mobile"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextAppearance="@style/BlueTextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7">

                    <EditText
                        android:id="@+id/mobileid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:textColorHint="@color/blue"
                        android:textSize="11dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField10"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:hint="@string/string_opening_balance"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextAppearance="@style/BlueTextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7">

                    <EditText
                        android:id="@+id/openingid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:textColorHint="@color/blue"
                        android:textSize="11dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:text="@string/string_Mobile_hint"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:text="@string/string_opening_balance_hint"
                    android:textSize="10dp" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/string_customer_email"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextAppearance="@style/BlueTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7">

                <EditText
                    android:id="@+id/emailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHint="@color/blue"
                    android:textSize="11dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField5"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/string_address"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextAppearance="@style/BlueTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7">

                <EditText
                    android:id="@+id/descriptionid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:maxLines="100"
                    android:scrollbars="vertical"
                    android:textColorHint="@color/blue"
                    android:textSize="11dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/string_address_hint"
                android:textSize="10dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/dialog_btn_style"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView12"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/savetv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/string_save"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_back"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/dialog_btn_back_style"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_save"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/string_btnback"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/btn_save"
                    app:layout_constraintTop_toTopOf="@+id/btn_save" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>